2008-03-17  Marc-Andre Lureau  <marcandre.lureau@gmail.com>

	* modulesets/bootstrap.modules: updated Python to 2.4.5.

2008-03-17  Frederic Peters  <fpeters@0d.be>

	* sample.jhbuildrc: changed sample jhbuildrc not to modify environment,
	as passing MAKEFLAGS or CFLAGS is best done through makeargs and
	autogenargs.

2008-03-16  Murray Cumming  <murrayc@murrayc.com>

	* modulesets/gnome-2.22.modules:
	* modulesets/gnome-2.24.modules: Added libgdamm-3.0 and made Glom 
	depend on it instead of libgdamm trunk.

2008-03-16  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* modulesets/gnome-suites-2.22.modules: atk, at-spi,
	gail, and mousetweaks have branched for gnome-2-22.

2008-03-16  Frederic Peters  <fpeters@0d.be>

	* jhbuild/defaults.jhbuildrc: changed default module set to GNOME 2.24.

2008-03-15  Marc-Andre Lureau  <marcandre.lureau@gmail.com>

	* modulesets/gnome-2.24.modules: add an empty line between each
	module for readibility, updated "sawfish" branch to trunk, removed
	"pan" "gnet" dependency, updated "gnet" to trunk, updated "gob2"
	to 2.0.15, updated camorama dependency.

2008-03-13  Marc-Andre Lureau  <marcandre.lureau@gmail.com>

	* modulesets/gnome-2.24.modules: removed GStreamer 0.8 (common!).
	Updated monkey-bubble dependency, removed nautilus-media, not
	maintained since 2004.  (closes: #522123)

2008-03-12  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* modulesets/gnome-suites-2.22.modules: glib has
	a glib-2-16 branch now.

2008-03-12  Frederic Peters  <fpeters@0d.be>

	* jhbuild/defaults.jhbuildrc: unset GTK_PATH as it could get wrong
	modules loaded in.  (closes: #521988)

2008-03-11  Olav Vitters  <olav@bkor.dhs.org>

	* modulesets/gnome-external-deps-2.22.modules: tango-project.org DNS
	is down. Use tango.freedesktop.org instead.
	* modulesets/gnome-external-deps-2.24.modules:

2008-03-11  Murray Cumming  <murrayc@murrayc.com>

	* modulesets/gnome-2.24.modules: Removed libgda-1-2 and libgdamm-1-2 