@@ -1,3 +1,8 @@
+2008-03-17  Frederic Peters  <fpeters@0d.be>
+
+	* jhbuild/commands/bootstrap.py: inherit bootstrap command from build
+	command, to gain all interesting parameters.  (closes: #522939)
+
 2008-03-17  Marc-Andre Lureau  <marcandre.lureau@gmail.com>
 
 	* modulesets/bootstrap.modules: updated Python to 2.4.5.
